agreue section de ordenes.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Stock Olmo Basic</title>
+    <title>Stock Olmo</title>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
         integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
@@ -11,78 +11,156 @@
 
 <body>
     <div id="main">
-        <img src="logo_100x100.jpg" />
-
-        <section class="form-control">
-            <form action="" class="text-center">
-                <input v-model="nombre" @keyup.enter="crearArticulo" type="text" name="nombre" placeholder="Articulo"
-                    class="form-control">
-                <input v-model="precio" @keyup.enter="crearArticulo" type="number" name="precio" placeholder="Precio"
-                    class="form-control">
-                <input v-model="cantidad" @keyup.enter="crearArticulo" type="number" name="cantidad"
-                    placeholder="Cantidad" class="form-control">
-                <!-- Botón para añadir -->
-                <input @click="crearArticulo" type="button" value="Agregar" class="btn btn-success">
-            </form>
-        </section>
-
-        <section class="data">
-            <caption>Listado Articulos</caption>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th scope="col">Id</th>
-                        <th scope="col">Nombre</th>
-                        <th scope="col">Precio</th>
-                        <th scope="col">Cantidad</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr v-for="(articulo, index) in articulos">
-                        <td>{{ articulo.id }}</td>
-                        <td>
-                            <span v-if="formActualizar && idActualizar == index">
-                                <input v-model="nombreActualizar" class="form-control">
-                            </span>
-                            <span v-else>
-                                {{ articulo.nombre }}
-                            </span>
-                        </td>
-                        <td>
-                            <span v-if="formActualizar && idActualizar == index">
-                                <input v-model="precioActualizar" class="form-control">
-                            </span>
-                            <span v-else>
-                                {{ articulo.precio }}
-                            </span>
-                        </td>
-                        <td>
-                            <span v-if="formActualizar && idActualizar == index">
-                                <input v-model="cantidadActualizar" class="form-control">
-                            </span>
-                            <span v-else>
-                                {{ articulo.cantidad }}
-                            </span>
-                        </td>
-                        <td>
-                            <!-- Botón para guardar la información actualizada -->
-                            <span v-if="formActualizar && idActualizar == index">
-                                <button @click="guardarActualizacion(index)" class="btn btn-success">Guardar</button>
-                            </span>
-                            <span v-else>
-                                <!-- Botón para mostrar el formulario de actualizar -->
-                                <button @click="verFormActualizar(index)" class="btn btn-warning">Actualizar</button>
-                                <!-- Botón para borrar -->
-                                <button @click="borrarArticulo(index)" class="btn btn-danger">Borrar</button>
-                            </span>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
+        <div class="container">
+            <img src="/src/assets/logo_100x100.jpg" />
+            <h4>Ingrese Articulos al Stock</h4>
+            <section class="form-control">
+                <form action="" class="text-center">
+                    <input v-model="nombre" @keyup.enter="crearArticulo" type="text" name="nombre"
+                        placeholder="Articulo" class="form-control">
+                    <input v-model="precio" @keyup.enter="crearArticulo" type="number" name="precio"
+                        placeholder="Precio" class="form-control">
+                    <input v-model="cantidad" @keyup.enter="crearArticulo" type="number" name="cantidad"
+                        placeholder="Cantidad" class="form-control">
+                    <!-- Botón para agregar -->
+                    <input @click="crearArticulo" type="button" value="Agregar Art a Stock" class="btn btn-success">
+                </form>
+            </section>
+        </div>
+        <div class="container">
+            <section class="data">
+                <h4>Listado Articulos en Stock</h4>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">id</th>
+                            <th scope="col">Nombre</th>
+                            <th scope="col">Precio</th>
+                            <th scope="col">Cantidad</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr v-for="(articulo, index) in articulos">
+                            <td>{{ articulo.id }}</td>
+                            <td>
+                                <span v-if="formActualizar && idActualizar == index">
+                                    <input v-model="nombreActualizar" class="form-control">
+                                </span>
+                                <span v-else>
+                                    {{ articulo.nombre }}
+                                </span>
+                            </td>
+                            <td>
+                                <span v-if="formActualizar && idActualizar == index">
+                                    <input v-model="precioActualizar" class="form-control">
+                                </span>
+                                <span v-else>
+                                    {{ articulo.precio }}
+                                </span>
+                            </td>
+                            <td>
+                                <span v-if="formActualizar && idActualizar == index">
+                                    <input v-model="cantidadActualizar" class="form-control">
+                                </span>
+                                <span v-else>
+                                    {{ articulo.cantidad }}
+                                </span>
+                            </td>
+                            <td>
+                                <!-- Botón para guardar la información actualizada -->
+                                <span v-if="formActualizar && idActualizar == index">
+                                    <button @click="guardarActualizacion(index)"
+                                        class="btn btn-success">Guardar</button>
+                                </span>
+                                <span v-else>
+                                    <!-- Botón para mostrar el formulario de actualizar -->
+                                    <button @click="verFormActualizar(index)"
+                                        class="btn btn-warning">Actualizar</button>
+                                    <!-- Botón para borrar -->
+                                    <button @click="borrarArticulo(index)" class="btn btn-danger">Borrar</button>
+                                </span>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+            <div>
+                <h4>Ingrese Orden de Compra</h4>
+                <section class="form-control">
+                    <form action="" class="text-center">
+                        <input v-model="cliente" @keyup.enter="crearOrden" type="text" name="cliente"
+                            placeholder="cliente" class="form-control">
+                        <input v-model="id" @keyup.enter="crearOrden" type="number" name="id" placeholder="id"
+                            class="form-control">
+                        <input v-model="cantidad" @keyup.enter="crearOrden" type="number" name="cantidad"
+                            placeholder="Cantidad" class="form-control">
+                        <!-- Botón para agregar -->
+                        <input @click="crearOrden" type="button" value="Agregar Art a Orden" class="btn btn-success">
+                    </form>
+                </section>
+            </div>
+            <div class="container">
+                <section class="data">
+                    <h4>Listado Articulos en Stock</h4>
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th scope="col">Cliente</th>
+                                <th scope="col">id</th>
+                                <th scope="col">Precio</th>
+                                <th scope="col">Cantidad</th>
+                                <th scope="col">Importe Total</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr v-for="(orden, index) in ordenes">
+                                <td>{{ orden.cliente }}</td>
+                                <td>
+                                    <span v-if="formActualizar && idActualizar == index">
+                                        <input v-model="nombreActualizar" class="form-control">
+                                    </span>
+                                    <span v-else>
+                                        {{ orden.id }}
+                                    </span>
+                                </td>
+                                <td>
+                                    <span v-if="formActualizar && idActualizar == index">
+                                        <input v-model="precioActualizar" class="form-control">
+                                    </span>
+                                    <span v-else>
+                                        {{ orden.precio }}
+                                    </span>
+                                </td>
+                                <td>
+                                    <span v-if="formActualizar && idActualizar == index">
+                                        <input v-model="cantidadActualizar" class="form-control">
+                                    </span>
+                                    <span v-else>
+                                        {{ articulo.cantidad }}
+                                    </span>
+                                </td>
+                                <td>
+                                    <!-- Botón para guardar la información actualizada -->
+                                    <span v-if="formActualizar && idActualizar == index">
+                                        <button @click="guardarActualizacion(index)"
+                                            class="btn btn-success">Guardar</button>
+                                    </span>
+                                    <span v-else>
+                                        <!-- Botón para mostrar el formulario de actualizar -->
+                                        <button @click="verFormActualizar(index)"
+                                            class="btn btn-warning">Actualizar</button>
+                                        <!-- Botón para borrar -->
+                                        <button @click="borrarArticulo(index)" class="btn btn-danger">Borrar</button>
+                                    </span>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </section>
+            </div>
+        </div>
     </div>
-
 </body>
 <script src="app.js"></script>
 
