Proyect ready bare bones.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <div class="container">
             <section class="data">
-                <h4>Listado Articulos en Stock</h4>
+                <h4>Listado Incial de Stock</h4>
                 <table class="table">
                     <thead>
                         <tr>
@@ -106,7 +106,7 @@
             </div>
             <div class="container">
                 <section class="data">
-                    <h4>Listado Orden de Compra</h4>
+                    <h4>Listado Ordenes de Compra</h4>
                     <table class="table">
                         <thead>
                             <tr>
